<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCadCli"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgMain"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="valdircamargo.com.br.projetofinalv001.ActFormCad"
    tools:showIn="@layout/act_form_cad">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_cpf"
        app:layout_constraintEnd_toEndOf="@+id/edtNome"
        app:layout_constraintStart_toStartOf="@+id/edtNome"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtCpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_idade"
        app:layout_constraintEnd_toEndOf="@+id/edtCpf"
        app:layout_constraintStart_toStartOf="@+id/edtCpf"
        app:layout_constraintTop_toBottomOf="@+id/edtCpf" />

    <EditText
        android:id="@+id/edtIdade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_telefone"
        app:layout_constraintEnd_toEndOf="@+id/edtIdade"
        app:layout_constraintStart_toStartOf="@+id/edtIdade"
        app:layout_constraintTop_toBottomOf="@+id/edtIdade" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_email"
        app:layout_constraintEnd_toEndOf="@+id/edtTelefone"
        app:layout_constraintStart_toStartOf="@+id/edtTelefone"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefone" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_test"
        android:drawableLeft="@drawable/ic_cancel_white_24dp"
        android:drawablePadding="-122dp"
        android:drawableStart="@drawable/ic_cancel_white_24dp"
        android:paddingLeft="120dp"
        android:paddingStart="120dp"
        android:text="@string/btn_cancelar"
        android:textAlignment="center"
        android:textColor="@color/colorBgMain"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_test"
        android:drawableLeft="@drawable/ic_save_white_24dp"
        android:drawablePadding="-142dp"
        android:drawableStart="@drawable/ic_save_white_24dp"
        android:paddingLeft="120dp"
        android:paddingStart="120dp"
        android:text="@string/btn_salvar"
        android:textAlignment="center"
        android:textColor="@color/colorBgMain"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="257dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_title_cad"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/colorBgMain"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toEndOf="@+id/imgBack2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imgBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/btn_test"
        android:contentDescription="@string/ct_desc"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

</android.support.constraint.ConstraintLayout>
