<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgMain"
    tools:context="valdircamargo.com.br.projetofinalv001.ActMain">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="292dp"
        android:text="@string/txt_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/ColorTitle"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_footer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="248dp"
        android:layout_height="282dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:tint="@color/ColorTitle"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:srcCompat="@drawable/xicara" />

    <Button
        android:id="@+id/btnCad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/btn_test"
        android:text="@string/btn_cad"
        android:textColor="@color/colorBgMain"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnLis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_test"
        android:text="@string/btn_listar"
        android:textColor="@color/colorBgMain"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCad"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnCad"
        app:layout_constraintTop_toTopOf="@+id/btnCad"
        app:layout_constraintVertical_bias="0.333" />

</android.support.constraint.ConstraintLayout>
